--- a/public/package.json
+++ b/public/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.22.0",
     "firebase-tools": "^12.0.0",
     "mdb-react-ui-kit": "^6.0.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
